--- a/course1/csscheatsheet/css/style.css
+++ b/course1/csscheatsheet/css/style.css
@@ -35,7 +35,6 @@ a:active {
   color: #fff;
   padding: 10px 15px;
   border: none;
-  border-radius: 5px;
   cursor: pointer;
 }
 
@@ -144,4 +143,50 @@ a:active {
   padding: 15px;
   box-sizing: border-box;
   margin: 20px 0;
+}
+
+.p-box {
+  width: 800px;
+  height: 500px;
+  border: 1px solid #000;
+  margin-top: 30px;
+  position: relative;
+  background-image: url("../images/bg-image.jpg");
+  background-repeat: no-repeat;
+  background-position: center top;
+}
+
+.p-box h1 {
+  position: absolute;
+  top: 100px;
+  left: 200px;
+}
+
+.p-box h2 {
+  position: absolute;
+  bottom: 40px;
+  right: 100px;
+}
+
+.fix-me {
+  position: fixed;
+  top: 400px;
+}
+
+/* pseudo-elements */
+
+.my-list li:first-child {
+  background: red;
+}
+
+.my-list li:last-child {
+  background: blue;
+}
+
+.my-list li:nth-child(5) {
+  background: yellow;
+}
+
+.my-list li:nth-child(even) {
+  background: green;
 }
